--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body, html {
   position: relative;
   width: 100px;
   height: 100px;
-  bottom: 0;
+  bottom: 150px;
   z-index: 10;
   object-fit: contain;
   user-select: none;
